# obsitocin

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/skills/vault-search/: SKILL.md
scripts/: gen_graph_image.py  migrate_escape_html_in_vault.py
src/obsitocin/: __init__.py  __main__.py  chunker.py  claude_client.py  cli.py  codex_client.py  concepts.py  config.py  doctor.py  embeddings.py  gemini_client.py  git_sync.py  hooks.py  hybrid_search.py  identity.py  ingest.py  lint.py  maintenance.py  mcp_server.py  memory_query.py  memory_relations.py  obsidian_writer.py  operations.py  organizer.py  pii.py  processor.py  provider.py  qa_logger.py  query_expansion.py  qwen_client.py  reindex.py  search_db.py  session_scanner.py  source_adapter.py  tokenizer.py  topic_writer.py
tests/: helpers.py  test_chunker.py  test_cli.py  test_embeddings.py  test_git_sync.py  test_hybrid_search.py  test_identity.py  test_ingest.py  test_lint.py  test_mcp_server.py  test_memory_query.py  test_new_features.py  test_processor.py  test_qa_logger.py  test_search_db.py  test_source_adapter.py  test_tokenizer.py  test_topic_writer.py  test_zettelkasten_features.py
tests/fixtures/: legacy_queue.json  new_queue.json  processed_qa.json
